--- a/stylua.toml
+++ b/stylua.toml
@@ -2,10 +2,11 @@ column_width = 120
 line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 4
-quote_style = "AutoPreferDouble"
-call_parentheses = "Always"
+# quote_style = "AutoPreferDouble"
+call_parentheses = "None"
 collapse_simple_statement = "Never"
 space_after_function_names = "Never"
+force_expand_multiline = true
 
 [sort_requires]
 enabled = false
